SERVER-13752 do not attempt to explode for sort with empty bounds